--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "poker-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.6",
     "web-vitals": "^2.1.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cli": "node --experimental-specifier-resolution=node ./src/cli.js",
+    "unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose=true"
   },
   "eslintConfig": {
     "extends": [
